# libLXDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dotlxdb.cpp  dotlxdb.h  win64-toolchain.cmake
.github/workflows/: cmake-multi-platform.yml  cmake.yml
.run/: dotLXDB.run.xml
dotlxdbtest/: Program.cs  dotlxdbtest.csproj  dotlxdbtest.sln
src/: dotlxdb.cpp  dotlxdb.h  exceptions.h
